# DXGIDuplicationCudaEnc

./: .gitignore  CMakeLists.txt  README.md
NvCodec/Utils/: NvEncoderCLIOptions.h
Utils/: FFmpegStreamer.h
include/: Core.hpp  Defs.h  Preproc.h  Preproc.hpp
include/Encoders/: CudaAV1.hpp  CudaH264.hpp  CudaH264Array.hpp  D3D11TextureConverter.h  IEncoder.hpp  Renderer.h
src/: DDAImpl.cpp  Preproc.cpp  main.cpp
src/Encoders/: CudaAV1.cpp  CudaH264.cpp  CudaH264Array.cpp  D3D11TextureConverter.cpp  Renderer.cpp  SQNvenc.cpp
src/Encoders/shaders/: PixelShaderNV12.hlsl  PixelShaderRGB.hlsl  VertexShader.hlsl  shaders.hlsl
